Fix for bug 163810 (Option Object created, own properties added, but Mozilla "forgets" them after some time.). r=sicking, sr=jst.